ops/vpc.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Parameters": {
    "VPCCidr": {
      "Type": "String",
      "Default": "192.168.0.0/27",
      "Description": "VPC ip addresses range"
    },
    "VPCSubnet1": {
      "Type": "String",
      "Default": "192.168.0.0/28",
      "Description": "VPC ip addresses range"
    },
    "VPCSubnet2": {
      "Type": "String",
      "Default": "192.168.0.16/28",
      "Description": "VPC ip addresses range"
    }
  },
  "Resources": {
    "SOAPWrapperVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": {
          "Ref": "VPCCidr"
        },
        "EnableDnsSupport": true,
        "EnableDnsHostnames": true,
        "Tags": [
          {
            "Key": "foo",
            "Value": "bar"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "ad2a3d44-7c41-4e4b-b0c8-ac169972e5fe"
        }
      }
    },
    "VPCInternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "internet-gateway",
            "Value": "vpc"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "454b23ba-0b86-445f-af2e-84a8e38203ee"
        }
      }
    },
    "VPCRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "SOAPWrapperVPC"
        },
        "Tags": [
          {
            "Key": "vpc-route-table",
            "Value": "vpc"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "e65187f1-d54a-42f2-a939-32aa7ca4c1b4"
        }
      }
    },
    "VPCToInternetRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": [
        "VPCInternetGateway"
      ],
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VPCInternetGateway"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "b958ddbd-15b2-48a6-a163-abe5b9dc0812"
        }
      }
    },
    "AttachVpnGateway": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "SOAPWrapperVPC"
        },
        "InternetGatewayId": {
          "Ref": "VPCInternetGateway"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "b84fe8e8-5874-480a-b0aa-dfe8ac803f3a"
        }
      }
    },
    "SOAPWrapperSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "MapPublicIpOnLaunch": true,
        "VpcId": {
          "Ref": "SOAPWrapperVPC"
        },
        "CidrBlock": {
          "Ref": "VPCSubnet1"
        },
        "AvailabilityZone": "us-east-1a",
        "Tags": [
          {
            "Key": "foo",
            "Value": "bar"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "0ade6398-2a5e-4e2f-9a08-4684bee39bb8"
        }
      }
    },
    "SOAPWrapperSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "MapPublicIpOnLaunch": true,
        "VpcId": {
          "Ref": "SOAPWrapperVPC"
        },
        "CidrBlock": {
          "Ref": "VPCSubnet2"
        },
        "AvailabilityZone": "us-east-1b",
        "Tags": [
          {
            "Key": "foo",
            "Value": "bar"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "6c1259af-5c87-43ab-80f9-b0714fe61006"
        }
      }
    },
    "LoadBalancer": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "Scheme": "internet-facing",
        "Name": "SOAPWrapperLoadBalancer",
        "Subnets": [
          {
            "Ref": "SOAPWrapperSubnet1"
          },
          {
            "Ref": "SOAPWrapperSubnet2"
          }
        ],
        "SecurityGroups": [
          {
            "Ref": "LoadBalancerSecurityGroup"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "ee1bfa72-817d-4d87-bc1c-00a8ca0a2ddb"
        }
      }
    },
    "LoadBalancerSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Loadbalancer Allowed Ports",
        "VpcId": {
          "Ref": "SOAPWrapperVPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "8080",
            "ToPort": "8080",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "179c570b-3773-4624-bc14-8647bce82b32"
        }
      }
    },
    "TargetGroup1": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "DependsOn": "LoadBalancer",
      "Properties": {
        "Name": "TargetGroup1",
        "Port": 80,
        "Protocol": "HTTP",
        "VpcId": {
          "Ref": "SOAPWrapperVPC"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "0847f061-abc9-461f-8fb1-c917bc07551b"
        }
      }
    },
    "LoadBalancerListener1": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "LoadBalancerArn": {
          "Ref": "LoadBalancer"
        },
        "Port": 80,
        "Protocol": "HTTP",
        "DefaultActions": [
          {
            "Type": "forward",
            "TargetGroupArn": {
              "Ref": "TargetGroup1"
            }
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "5e7990a9-1f3a-4718-9d2a-194ea4afc52a"
        }
      }
    },
    "ListenerRule1": {
      "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
      "Properties": {
        "ListenerArn": {
          "Ref": "LoadBalancerListener1"
        },
        "Priority": 1,
        "Conditions": [
          {
            "Field": "path-pattern",
            "Values": [
              "/"
            ]
          }
        ],
        "Actions": [
          {
            "TargetGroupArn": {
              "Ref": "TargetGroup1"
            },
            "Type": "forward"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "fc64b26d-ff6b-44d6-8604-6b12ea1ba172"
        }
      }
    },
    "Subnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "SOAPWrapperSubnet1"
        },
        "RouteTableId": {
          "Ref": "VPCRouteTable"
        }
      }
    },
    "Subnet2RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "SOAPWrapperSubnet2"
        },
        "RouteTableId": {
          "Ref": "VPCRouteTable"
        }
      }
    }
  },
  "Outputs": {
    "Subnet1": {
      "Value": {
        "Ref": "SOAPWrapperSubnet1"
      }
    },
    "Subnet2": {
      "Value": {
        "Ref": "SOAPWrapperSubnet2"
      }
    },
    "VpcId": {
      "Value": {
        "Ref": "SOAPWrapperVPC"
      }
    },
    "LoadBalancerSecurityGroup": {
      "Value": {
        "Ref": "LoadBalancerSecurityGroup"
      }
    },
    "LoadBalancer": {
      "Value": {
        "Ref": "LoadBalancer"
      }
    },
    "TargetGroup": {
      "Value": {
        "Ref": "TargetGroup1"
      }
    }
  }
}
